--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # Local .terraform directories
 **/.terraform/*
+**/modules/*.terraform.lock.hcl
 
 # .tfstate files
 *.tfstate
 *.tfstate.*
+
+# terragrunt files
+*.terragrunt-cache
 
 # Crash log files
 crash.log
