add initial version of token lambda

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 **/modules/*.terraform.lock.hcl
 
 # .tfstate files
-*.tfstate
-*.tfstate.*
+# *.tfstate
+# *.tfstate.*
 
 # terragrunt files
 *.terragrunt-cache
