--- a/live/github.yaml
+++ b/live/github.yaml
@@ -7,6 +7,14 @@ repositories:
         codeowners: |
             * @CloudCitizen/Infrastructure
         description: "Member-only organization profile"
+    github-workflows:
+        teams_pull_allowed: []
+        teams_push_allowed: ["Infrastructure"]
+        type: plain
+        gitignore_template:
+        codeowners: |
+            * @CloudCitizen/Infrastructure
+        description: "Repo to store all reusable Github workflows"
     polaris-iam:
         teams_pull_allowed: []
         teams_push_allowed: ["Infrastructure"]
